<resources>
    <string name="background_decor_tree">background decor: tree</string>
    <string name="background_decor_paint">background decor: paint</string>
    <string name="background_decor_rainbow">background decor: rainbow</string>

    <string name="app_name">app</string>
    <string name="app_name_here">My HeartBeat</string>
    <string name="for_a_healthier_heart">-For a healthier heart-</string>
    <string name="my_heart_rate">My Heart Rate</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="history">History</string>
    <string name="UserInfo">User Info</string>
    <string name="UserInformation">User\nInformation</string>
    <string name="credits">Credits</string>

    <string name="bluetooth_status">bluetooth_status</string>
    <string name="bluetooth_supported">Bluetooth supported</string>
    <string name="bluetooth_status_on">Bluetooth status: On</string>
    <string name="bluetooth_status_off">Bluetooth status: Off</string>
    <string name="bluetooth_status_connected">Bluetooth status: Connected</string>
    <string name="bluetooth_not_supported">Bluetooth status: Not supported</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="bluetoothImageDesc">Turn Bluetooth On/Off</string>
    <string name="showDevices">Show Bluetooth Devices</string>
    <string name="paired_device">Paired Device:</string>
    <string name="device_unavailable">Unavailable</string>
    <string name="refresh_bluetooth_status">refresh bluetooth status</string>
    <string name="tap_to_refresh">tap to refresh</string>

    <string name="displayHR">Heart rate display</string>
    <string name="save">save</string>

    <string name="Dolgormaa_name">Namkhainyambuu Dolgormaa (덜거르마)</string>
    <string name="Dolgormaa_ID">32215125</string>
    <string name="Jasper_name">Yap Jas Per (자스퍼)</string>
    <string name="Jasper_ID">32213835</string>
    <string name="Phoebe_name">Phoebe Lee (피비리)</string>
    <string name="Phoebe_ID">32215044</string>
    <string name="Michael_name">Hermanto Michael Augusta (마이클)</string>
    <string name="Michael_ID">32215039</string>
    <string name="Josean_name">Chandra Josean Kevin (조세안테빈)</string>
    <string name="Josean_ID">32215122</string>

    <string name="empty">""</string>
    <string name="sampleHR">"85 BPM"</string>
    <string name="sampleName">Jasper</string>
    <string name="sampleID">221027001</string>
    <string name="sampleDeviceName">Jasper\'s Phone</string>
    <string name="sampleMAC">90:2B:34:9E:0E:C0</string>
    <string name="sampleTimeZone">GMT+9</string>
    <string name="background_dot">background dot</string>
    <string name="username">Name:</string>
    <string name="userID">ID:</string>
    <string name="deviceName">Device Name:</string>
    <string name="change">change</string>
    <string name="deviceMAC">Device MAC address:</string>
    <string name="deviceTimeZone">Device Time Zone:</string>
    <string name="paired_devices">Paired Devices:</string>
 />

    <string-array name="sampleHistory">
        <item>2022, October 27 (Thu) 18:54:59\n85 BPM</item>
        <item>2022, October 26 (Wed) 23:45:03\n88 BPM</item>
    </string-array>
</resources>