<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeartRate_pg">

    <TextView
        android:id="@+id/MainTitle"
        style="@style/subpg_mainTitle"
        android:layout_marginTop="130dp"
        android:text="@string/my_heart_rate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextClock
        android:id="@+id/Time"
        style="@style/timeClock"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/MainTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageView
        android:id="@+id/imageView"
        style="@style/heartRateDisplay"
        android:contentDescription="@string/displayHR"
        app:layout_constraintBottom_toTopOf="@id/HeartRateStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainTitle"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/sample_heartrate" />

    <TextView
        android:id="@+id/HeartRateStats"
        style="@style/heartRate"
        android:layout_marginTop="275dp"
        android:text="@string/sampleHR"
        app:layout_constraintTop_toBottomOf="@+id/MainTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/button"
        style="@style/save_button"
        android:layout_marginTop="15dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/HeartRateStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>