<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo_pg">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:backgroundTint="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbtn" />

    <TextView
        android:id="@+id/userNameDisplay"
        style="@style/userInfo_detailsListing"
        android:layout_width="261dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/UserName"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <TextView
        android:id="@+id/userEmailDisplay"
        style="@style/userInfo_detailsListing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/UserEmail"
        app:layout_constraintTop_toBottomOf="@+id/UserEmail" />

    <TextView
        android:id="@+id/MainTitle"
        style="@style/subpg_mainTitle"
        android:layout_marginTop="100dp"
        android:text="@string/UserInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UserName"
        style="@style/userInfo_details"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainTitle" />

    <TextView
        android:id="@+id/UserEmail"
        style="@style/userInfo_details"
        android:layout_marginTop="52dp"
        android:text="Email:"
        app:layout_constraintStart_toStartOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <TextView
        android:id="@+id/deviceName"
        style="@style/userInfo_details"
        android:text="@string/deviceName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/deviceNameDisplay"
        style="@style/userInfo_detailsListing"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/deviceName"
        app:layout_constraintTop_toBottomOf="@+id/deviceName" />

    <Button
        android:id="@+id/google_signin"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:background="@color/white"
        android:text="SIGN IN WITH GMAIL"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

</androidx.constraintlayout.widget.ConstraintLayout>